hphp/hack/test/typecheck/representable_as/representable_as_feature_gate.php
<?hh

function test_representable_as_requires_feature(
  \HH\Runtime\RepresentableAs<int> $_,
): void {}
